made the df smaller

--- a/main.ipynb
+++ b/main.ipynb
@@ -1605,7 +1605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1824,7 +1824,7 @@
        "[5 rows x 207 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1833,6 +1833,277 @@
     "company_info_df = pd.read_csv('company_info_df.csv').T\n",
     "company_info_df = company_info_df.rename(columns=company_info_df.iloc[0]).drop(company_info_df.index[0])\n",
     "company_info_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['sectorKey', 'sectorDisp', 'compensationRisk', 'shareHolderRightsRisk', 'governanceEpochDate', 'executiveTeam', 'maxAge', 'priceHint', 'currency', 'tradeable', 'SandP52WeekChange', 'quoteType', 'recommendationKey', 'language', 'region', 'typeDisp', 'quoteSourceName', 'triggerable', 'customPriceAlertConfidence', 'isEarningsDateEstimate', 'sourceInterval', 'exchangeDataDelayedBy', 'cryptoTradeable', 'marketState', 'hasPrePostMarketData', 'fullExchangeName', 'exchange', 'exchangeTimezoneName', 'exchangeTimezoneShortName', 'gmtOffSetMilliseconds', 'market', 'esgPopulated', 'nameChangeDate', 'yield', 'navPrice', 'category', 'ytdReturn', 'beta3Year', 'fundFamily', 'fundInceptionDate', 'legalType', 'threeYearAverageReturn', 'fiveYearAverageReturn', 'trailingThreeMonthReturns', 'trailingThreeMonthNavReturns', 'netAssets', 'netExpenseRatio', 'newListingDate', 'address3', 'morningStarOverallRating', 'morningStarRiskRating', 'annualReportExpenseRatio', 'lastCapGain', 'annualHoldingsTurnover']\n"
+     ]
+    }
+   ],
+   "source": [
+    "drop_cols_2 = []\n",
+    "for x in company_info_df.columns:\n",
+    "    if x in [\"sector\", \"auditRisk\", \"boardRisk\", \"overallRisk\", \"totalAssets\"]:\n",
+    "        continue\n",
+    "    if len(company_info_df[x].unique()) < 20:\n",
+    "        drop_cols_2.append(x)\n",
+    "\n",
+    "print(drop_cols_2) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>address1</th>\n",
+       "      <th>city</th>\n",
+       "      <th>state</th>\n",
+       "      <th>zip</th>\n",
+       "      <th>country</th>\n",
+       "      <th>phone</th>\n",
+       "      <th>fax</th>\n",
+       "      <th>website</th>\n",
+       "      <th>industry</th>\n",
+       "      <th>industryKey</th>\n",
+       "      <th>...</th>\n",
+       "      <th>regularMarketChangePercent</th>\n",
+       "      <th>regularMarketPrice</th>\n",
+       "      <th>shortName</th>\n",
+       "      <th>longName</th>\n",
+       "      <th>displayName</th>\n",
+       "      <th>trailingPegRatio</th>\n",
+       "      <th>address2</th>\n",
+       "      <th>ipoExpectedDate</th>\n",
+       "      <th>prevName</th>\n",
+       "      <th>totalAssets</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>A</th>\n",
+       "      <td>5301 Stevens Creek Boulevard</td>\n",
+       "      <td>Santa Clara</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>95051</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>800 227 9770</td>\n",
+       "      <td>866 497 1134</td>\n",
+       "      <td>https://www.agilent.com</td>\n",
+       "      <td>Diagnostics &amp; Research</td>\n",
+       "      <td>diagnostics-research</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-1.96787</td>\n",
+       "      <td>103.12</td>\n",
+       "      <td>Agilent Technologies, Inc.</td>\n",
+       "      <td>Agilent Technologies, Inc.</td>\n",
+       "      <td>Agilent</td>\n",
+       "      <td>1.7138</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AAME</th>\n",
+       "      <td>4370 Peachtree Road, N.E.</td>\n",
+       "      <td>Atlanta</td>\n",
+       "      <td>GA</td>\n",
+       "      <td>30319</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>404 266 5500</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>https://www.atlam.com</td>\n",
+       "      <td>Insurance - Life</td>\n",
+       "      <td>insurance-life</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3.6496315</td>\n",
+       "      <td>1.42</td>\n",
+       "      <td>Atlantic American Corporation</td>\n",
+       "      <td>Atlantic American Corporation</td>\n",
+       "      <td>Atlantic American</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AAOI</th>\n",
+       "      <td>13139 Jess Pirtle Boulevard</td>\n",
+       "      <td>Sugar Land</td>\n",
+       "      <td>TX</td>\n",
+       "      <td>77478</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>(281) 295-1800</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>https://www.ao-inc.com</td>\n",
+       "      <td>Communication Equipment</td>\n",
+       "      <td>communication-equipment</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.7777761</td>\n",
+       "      <td>11.45</td>\n",
+       "      <td>Applied Optoelectronics, Inc.</td>\n",
+       "      <td>Applied Optoelectronics, Inc.</td>\n",
+       "      <td>Applied Optoelectronics</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AAON</th>\n",
+       "      <td>2425 South Yukon Avenue</td>\n",
+       "      <td>Tulsa</td>\n",
+       "      <td>OK</td>\n",
+       "      <td>74107</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>918 583 2266</td>\n",
+       "      <td>918 583 6094</td>\n",
+       "      <td>https://www.aaon.com</td>\n",
+       "      <td>Building Products &amp; Equipment</td>\n",
+       "      <td>building-products-equipment</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-2.285449</td>\n",
+       "      <td>82.09</td>\n",
+       "      <td>AAON, Inc.</td>\n",
+       "      <td>AAON, Inc.</td>\n",
+       "      <td>AAON</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AAP</th>\n",
+       "      <td>4200 Six Forks Road</td>\n",
+       "      <td>Raleigh</td>\n",
+       "      <td>NC</td>\n",
+       "      <td>27609</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>540 362 4911</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>https://shop.advanceautoparts.com</td>\n",
+       "      <td>Auto Parts</td>\n",
+       "      <td>auto-parts</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-1.49027</td>\n",
+       "      <td>32.39</td>\n",
+       "      <td>Advance Auto Parts Inc.</td>\n",
+       "      <td>Advance Auto Parts, Inc.</td>\n",
+       "      <td>Advance Auto Parts</td>\n",
+       "      <td>0.6706</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 153 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                          address1         city state    zip        country  \\\n",
+       "A     5301 Stevens Creek Boulevard  Santa Clara    CA  95051  United States   \n",
+       "AAME     4370 Peachtree Road, N.E.      Atlanta    GA  30319  United States   \n",
+       "AAOI   13139 Jess Pirtle Boulevard   Sugar Land    TX  77478  United States   \n",
+       "AAON       2425 South Yukon Avenue        Tulsa    OK  74107  United States   \n",
+       "AAP            4200 Six Forks Road      Raleigh    NC  27609  United States   \n",
+       "\n",
+       "               phone           fax                            website  \\\n",
+       "A       800 227 9770  866 497 1134            https://www.agilent.com   \n",
+       "AAME    404 266 5500           NaN              https://www.atlam.com   \n",
+       "AAOI  (281) 295-1800           NaN             https://www.ao-inc.com   \n",
+       "AAON    918 583 2266  918 583 6094               https://www.aaon.com   \n",
+       "AAP     540 362 4911           NaN  https://shop.advanceautoparts.com   \n",
+       "\n",
+       "                           industry                  industryKey  ...  \\\n",
+       "A            Diagnostics & Research         diagnostics-research  ...   \n",
+       "AAME               Insurance - Life               insurance-life  ...   \n",
+       "AAOI        Communication Equipment      communication-equipment  ...   \n",
+       "AAON  Building Products & Equipment  building-products-equipment  ...   \n",
+       "AAP                      Auto Parts                   auto-parts  ...   \n",
+       "\n",
+       "     regularMarketChangePercent regularMarketPrice  \\\n",
+       "A                      -1.96787             103.12   \n",
+       "AAME                  3.6496315               1.42   \n",
+       "AAOI                  1.7777761              11.45   \n",
+       "AAON                  -2.285449              82.09   \n",
+       "AAP                    -1.49027              32.39   \n",
+       "\n",
+       "                          shortName                       longName  \\\n",
+       "A        Agilent Technologies, Inc.     Agilent Technologies, Inc.   \n",
+       "AAME  Atlantic American Corporation  Atlantic American Corporation   \n",
+       "AAOI  Applied Optoelectronics, Inc.  Applied Optoelectronics, Inc.   \n",
+       "AAON                     AAON, Inc.                     AAON, Inc.   \n",
+       "AAP         Advance Auto Parts Inc.       Advance Auto Parts, Inc.   \n",
+       "\n",
+       "                  displayName trailingPegRatio address2 ipoExpectedDate  \\\n",
+       "A                     Agilent           1.7138      NaN             NaN   \n",
+       "AAME        Atlantic American              NaN      NaN             NaN   \n",
+       "AAOI  Applied Optoelectronics              NaN      NaN             NaN   \n",
+       "AAON                     AAON              NaN      NaN             NaN   \n",
+       "AAP        Advance Auto Parts           0.6706      NaN             NaN   \n",
+       "\n",
+       "     prevName totalAssets  \n",
+       "A         NaN         NaN  \n",
+       "AAME      NaN         NaN  \n",
+       "AAOI      NaN         NaN  \n",
+       "AAON      NaN         NaN  \n",
+       "AAP       NaN         NaN  \n",
+       "\n",
+       "[5 rows x 153 columns]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "company_info_df = company_info_df.drop(drop_cols_2, axis = 1)\n",
+    "company_info_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "company_info_df.to_csv(\"company_info_df_clean.csv\")\n"
    ]
   },
   {
