Making new large df

--- a/main.ipynb
+++ b/main.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -627,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -636,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -784,7 +784,7 @@
        "4                    9  h1b       13  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2104,6 +2104,436 @@
    "outputs": [],
    "source": [
     "company_info_df.to_csv(\"company_info_df_clean.csv\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "company_info_df = pd.read_csv(\"company_info_df_clean.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Fiscal Year</th>\n",
+       "      <th>ticker</th>\n",
+       "      <th>matched_company</th>\n",
+       "      <th>Tax ID</th>\n",
+       "      <th>Industry (NAICS) Code</th>\n",
+       "      <th>Petitioner City</th>\n",
+       "      <th>Petitioner State</th>\n",
+       "      <th>Petitioner Zip Code</th>\n",
+       "      <th>Initial Approval</th>\n",
+       "      <th>Continuing Approval</th>\n",
+       "      <th>type</th>\n",
+       "      <th>tot_app</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>20870</th>\n",
+       "      <td>2024</td>\n",
+       "      <td>A</td>\n",
+       "      <td>AGILENT</td>\n",
+       "      <td>4058.0</td>\n",
+       "      <td>54 - Professional, Scientific, and Technical S...</td>\n",
+       "      <td>PORT WASHINGTON</td>\n",
+       "      <td>NY</td>\n",
+       "      <td>11050.0</td>\n",
+       "      <td>41</td>\n",
+       "      <td>62</td>\n",
+       "      <td>h1b</td>\n",
+       "      <td>103</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20871</th>\n",
+       "      <td>2024</td>\n",
+       "      <td>AAME</td>\n",
+       "      <td>ATLANTIC AMERICAN</td>\n",
+       "      <td>1244.0</td>\n",
+       "      <td>72 - Accommodation and Food Services</td>\n",
+       "      <td>VIRGINIA BEACH</td>\n",
+       "      <td>VA</td>\n",
+       "      <td>23451.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>19</td>\n",
+       "      <td>h1b</td>\n",
+       "      <td>27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20872</th>\n",
+       "      <td>2024</td>\n",
+       "      <td>AAOI</td>\n",
+       "      <td>APPLIED OPTOELECTRONICS</td>\n",
+       "      <td>3928.0</td>\n",
+       "      <td>31-33 - Manufacturing</td>\n",
+       "      <td>FREMONT</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>94538.0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>6</td>\n",
+       "      <td>h1b</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20873</th>\n",
+       "      <td>2024</td>\n",
+       "      <td>AAON</td>\n",
+       "      <td>AAON</td>\n",
+       "      <td>7630.0</td>\n",
+       "      <td>53 - Real Estate and Rental and Leasing</td>\n",
+       "      <td>ATLANTA</td>\n",
+       "      <td>GA</td>\n",
+       "      <td>30339.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>h1b</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20874</th>\n",
+       "      <td>2024</td>\n",
+       "      <td>AAP</td>\n",
+       "      <td>ADVANCE AUTO PARTS</td>\n",
+       "      <td>2637.0</td>\n",
+       "      <td>44-45 - Retail Trade</td>\n",
+       "      <td>WAYNE</td>\n",
+       "      <td>PA</td>\n",
+       "      <td>19087.0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>13</td>\n",
+       "      <td>h1b</td>\n",
+       "      <td>19</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Fiscal Year ticker          matched_company  Tax ID  \\\n",
+       "20870         2024      A                  AGILENT  4058.0   \n",
+       "20871         2024   AAME        ATLANTIC AMERICAN  1244.0   \n",
+       "20872         2024   AAOI  APPLIED OPTOELECTRONICS  3928.0   \n",
+       "20873         2024   AAON                     AAON  7630.0   \n",
+       "20874         2024    AAP       ADVANCE AUTO PARTS  2637.0   \n",
+       "\n",
+       "                                   Industry (NAICS) Code  Petitioner City  \\\n",
+       "20870  54 - Professional, Scientific, and Technical S...  PORT WASHINGTON   \n",
+       "20871               72 - Accommodation and Food Services   VIRGINIA BEACH   \n",
+       "20872                              31-33 - Manufacturing          FREMONT   \n",
+       "20873            53 - Real Estate and Rental and Leasing          ATLANTA   \n",
+       "20874                               44-45 - Retail Trade            WAYNE   \n",
+       "\n",
+       "      Petitioner State  Petitioner Zip Code  Initial Approval  \\\n",
+       "20870               NY              11050.0                41   \n",
+       "20871               VA              23451.0                 8   \n",
+       "20872               CA              94538.0                 7   \n",
+       "20873               GA              30339.0                 2   \n",
+       "20874               PA              19087.0                 6   \n",
+       "\n",
+       "       Continuing Approval type  tot_app  \n",
+       "20870                   62  h1b      103  \n",
+       "20871                   19  h1b       27  \n",
+       "20872                    6  h1b       13  \n",
+       "20873                    0  h1b        2  \n",
+       "20874                   13  h1b       19  "
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "h1b_2024 = h1b_df[h1b_df['Fiscal Year'] == 2024]\n",
+    "h1b_2024.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>address1</th>\n",
+       "      <th>city</th>\n",
+       "      <th>state</th>\n",
+       "      <th>zip</th>\n",
+       "      <th>country</th>\n",
+       "      <th>phone</th>\n",
+       "      <th>fax</th>\n",
+       "      <th>website</th>\n",
+       "      <th>industry</th>\n",
+       "      <th>...</th>\n",
+       "      <th>matched_company</th>\n",
+       "      <th>Tax ID</th>\n",
+       "      <th>Industry (NAICS) Code</th>\n",
+       "      <th>Petitioner City</th>\n",
+       "      <th>Petitioner State</th>\n",
+       "      <th>Petitioner Zip Code</th>\n",
+       "      <th>Initial Approval</th>\n",
+       "      <th>Continuing Approval</th>\n",
+       "      <th>type</th>\n",
+       "      <th>tot_app</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>A</td>\n",
+       "      <td>5301 Stevens Creek Boulevard</td>\n",
+       "      <td>Santa Clara</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>95051</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>800 227 9770</td>\n",
+       "      <td>866 497 1134</td>\n",
+       "      <td>https://www.agilent.com</td>\n",
+       "      <td>Diagnostics &amp; Research</td>\n",
+       "      <td>...</td>\n",
+       "      <td>AGILENT</td>\n",
+       "      <td>4058.0</td>\n",
+       "      <td>54 - Professional, Scientific, and Technical S...</td>\n",
+       "      <td>PORT WASHINGTON</td>\n",
+       "      <td>NY</td>\n",
+       "      <td>11050.0</td>\n",
+       "      <td>41</td>\n",
+       "      <td>62</td>\n",
+       "      <td>h1b</td>\n",
+       "      <td>103</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>AAME</td>\n",
+       "      <td>4370 Peachtree Road, N.E.</td>\n",
+       "      <td>Atlanta</td>\n",
+       "      <td>GA</td>\n",
+       "      <td>30319</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>404 266 5500</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>https://www.atlam.com</td>\n",
+       "      <td>Insurance - Life</td>\n",
+       "      <td>...</td>\n",
+       "      <td>ATLANTIC AMERICAN</td>\n",
+       "      <td>1244.0</td>\n",
+       "      <td>72 - Accommodation and Food Services</td>\n",
+       "      <td>VIRGINIA BEACH</td>\n",
+       "      <td>VA</td>\n",
+       "      <td>23451.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>19</td>\n",
+       "      <td>h1b</td>\n",
+       "      <td>27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>AAOI</td>\n",
+       "      <td>13139 Jess Pirtle Boulevard</td>\n",
+       "      <td>Sugar Land</td>\n",
+       "      <td>TX</td>\n",
+       "      <td>77478</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>(281) 295-1800</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>https://www.ao-inc.com</td>\n",
+       "      <td>Communication Equipment</td>\n",
+       "      <td>...</td>\n",
+       "      <td>APPLIED OPTOELECTRONICS</td>\n",
+       "      <td>3928.0</td>\n",
+       "      <td>31-33 - Manufacturing</td>\n",
+       "      <td>FREMONT</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>94538.0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>6</td>\n",
+       "      <td>h1b</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>AAON</td>\n",
+       "      <td>2425 South Yukon Avenue</td>\n",
+       "      <td>Tulsa</td>\n",
+       "      <td>OK</td>\n",
+       "      <td>74107</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>918 583 2266</td>\n",
+       "      <td>918 583 6094</td>\n",
+       "      <td>https://www.aaon.com</td>\n",
+       "      <td>Building Products &amp; Equipment</td>\n",
+       "      <td>...</td>\n",
+       "      <td>AAON</td>\n",
+       "      <td>7630.0</td>\n",
+       "      <td>53 - Real Estate and Rental and Leasing</td>\n",
+       "      <td>ATLANTA</td>\n",
+       "      <td>GA</td>\n",
+       "      <td>30339.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>h1b</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>AAP</td>\n",
+       "      <td>4200 Six Forks Road</td>\n",
+       "      <td>Raleigh</td>\n",
+       "      <td>NC</td>\n",
+       "      <td>27609</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>540 362 4911</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>https://shop.advanceautoparts.com</td>\n",
+       "      <td>Auto Parts</td>\n",
+       "      <td>...</td>\n",
+       "      <td>ADVANCE AUTO PARTS</td>\n",
+       "      <td>2637.0</td>\n",
+       "      <td>44-45 - Retail Trade</td>\n",
+       "      <td>WAYNE</td>\n",
+       "      <td>PA</td>\n",
+       "      <td>19087.0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>13</td>\n",
+       "      <td>h1b</td>\n",
+       "      <td>19</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 166 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Unnamed: 0                      address1         city state    zip  \\\n",
+       "0          A  5301 Stevens Creek Boulevard  Santa Clara    CA  95051   \n",
+       "1       AAME     4370 Peachtree Road, N.E.      Atlanta    GA  30319   \n",
+       "2       AAOI   13139 Jess Pirtle Boulevard   Sugar Land    TX  77478   \n",
+       "3       AAON       2425 South Yukon Avenue        Tulsa    OK  74107   \n",
+       "4        AAP           4200 Six Forks Road      Raleigh    NC  27609   \n",
+       "\n",
+       "         country           phone           fax  \\\n",
+       "0  United States    800 227 9770  866 497 1134   \n",
+       "1  United States    404 266 5500           NaN   \n",
+       "2  United States  (281) 295-1800           NaN   \n",
+       "3  United States    918 583 2266  918 583 6094   \n",
+       "4  United States    540 362 4911           NaN   \n",
+       "\n",
+       "                             website                       industry  ...  \\\n",
+       "0            https://www.agilent.com         Diagnostics & Research  ...   \n",
+       "1              https://www.atlam.com               Insurance - Life  ...   \n",
+       "2             https://www.ao-inc.com        Communication Equipment  ...   \n",
+       "3               https://www.aaon.com  Building Products & Equipment  ...   \n",
+       "4  https://shop.advanceautoparts.com                     Auto Parts  ...   \n",
+       "\n",
+       "           matched_company  Tax ID  \\\n",
+       "0                  AGILENT  4058.0   \n",
+       "1        ATLANTIC AMERICAN  1244.0   \n",
+       "2  APPLIED OPTOELECTRONICS  3928.0   \n",
+       "3                     AAON  7630.0   \n",
+       "4       ADVANCE AUTO PARTS  2637.0   \n",
+       "\n",
+       "                               Industry (NAICS) Code  Petitioner City  \\\n",
+       "0  54 - Professional, Scientific, and Technical S...  PORT WASHINGTON   \n",
+       "1               72 - Accommodation and Food Services   VIRGINIA BEACH   \n",
+       "2                              31-33 - Manufacturing          FREMONT   \n",
+       "3            53 - Real Estate and Rental and Leasing          ATLANTA   \n",
+       "4                               44-45 - Retail Trade            WAYNE   \n",
+       "\n",
+       "   Petitioner State Petitioner Zip Code  Initial Approval  \\\n",
+       "0                NY             11050.0                41   \n",
+       "1                VA             23451.0                 8   \n",
+       "2                CA             94538.0                 7   \n",
+       "3                GA             30339.0                 2   \n",
+       "4                PA             19087.0                 6   \n",
+       "\n",
+       "   Continuing Approval  type  tot_app  \n",
+       "0                   62   h1b      103  \n",
+       "1                   19   h1b       27  \n",
+       "2                    6   h1b       13  \n",
+       "3                    0   h1b        2  \n",
+       "4                   13   h1b       19  \n",
+       "\n",
+       "[5 rows x 166 columns]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "visa_and_info_df = company_info_df.merge(h1b_2024, how = 'inner', left_on='symbol', right_on='ticker')\n",
+    "visa_and_info_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['Unnamed: 0', 'address1', 'city', 'state', 'zip', 'country', 'phone',\n",
+      "       'fax', 'website', 'industry',\n",
+      "       ...\n",
+      "       'matched_company', 'Tax ID', 'Industry (NAICS) Code', 'Petitioner City',\n",
+      "       'Petitioner State', 'Petitioner Zip Code', 'Initial Approval',\n",
+      "       'Continuing Approval', 'type', 'tot_app'],\n",
+      "      dtype='object', length=166)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(visa_and_info_df.columns)"
    ]
   },
   {
